Added witnessing of potholes feature
